# meeting-notes

./: CLAUDE.md  README.md  SPEC.md  pyproject.toml  setup.sh
meeting_notes/: audio.py  config.py  display.py  main.py  summarizer.py  transcriber.py
